<resources>
    <string name="app_name">Wooble</string>
    <string name="Wooble">Wooble</string>
    <string name="your_portfolio">Your Portfolio!</string>
    <string name="your_reflection">Your Reflection!</string>
    <string name="todo">TODO</string>
    <string name="enter_your_registered_email">enter your Email</string>
    <string name="don_t_worry_we_are_here">Enter your email and we\'ll</string>
    <string name="go_back_to_login_screen">Go back to Login Screen</string>
    <string name="send_you_a_verification_code">send you a verification code</string>
    <string name="to_reset_your_password">to reset your password.</string>
    <string name="don_t_worry">Don\'t worry.</string>
    <string name="submit">Submit</string>
    <string name="version_1_0">VERSION: 1.0</string>
    <string name="portfolio">Portfolio</string>
    <string name="resume">Resume</string>
    <string name="blogs">Blogs</string>
    <string name="gallery">Gallery</string>
    <string name="works">Works</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="help_center">Help Center</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_amp_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="end_user_license_agreement">End User License Agreement</string>
    <string name="data_privacy">Data privacy</string>
    <string name="we_wooble_software_private_limited_are_registered_at_1c_102_kaushlaya_enclave_rajeev_nagar_patia_bhubaneswar_751024_hereinafter_referred_to_as_wooble_at_wooble_we_value_your_trust_amp_respect_your_privacy_this_privacy_policy_provides_you_with_details_about_the_manner_in_which_your_data_is_collected_stored_amp_used_by_us_you_are_advised_to_read_this_privacy_policy_carefully_by_downloading_and_using_the_application_website_wap_site_you_expressly_give_us_consent_to_use_amp_disclose_your_personal_information_in_accordance_with_this_privacy_policy_if_you_do_not_agree_to_the_terms_of_the_policy_please_do_not_use_or_access_our_website"><![CDATA[We, Wooble Software Private Limited, are registered at 1C-102, Kaushlaya Enclave, Rajeev Nagar, Patia, Bhubaneswar-751024 hereinafter referred to as Wooble. At Wooble, we value your trust & respect your privacy. This Privacy Policy provides you with details about the manner in which your data is collected, stored & used by us. You are advised to read this Privacy Policy carefully. By downloading and using the application/ website/WAP site you expressly give us consent to use & disclose your personal information in accordance with this Privacy Policy. If you do not agree to the terms of the policy, please do not use or access our website.]]></string>
    <string name="note_our_privacy_policy_may_change_at_any_time_without_prior_notification_to_make_sure_that_you_are_aware_of_any_changes_kindly_review_the_policy_periodically_this_privacy_policy_shall_apply_uniformly_to_all_wooble_applications_desktop_website_amp_mobile_wap_site"><![CDATA[Note: Our privacy policy may change at any time without prior notification. To make sure that you are aware of any changes, kindly review the policy periodically. This Privacy Policy shall apply uniformly to all Wooble applications, desktop website & mobile WAP site.]]></string>
    <string name="general">General</string>
    <string name="we_will_not_sell_share_or_rent_your_personal_information_to_any_3rd_party_or_use_your_email_address_mobile_number_for_unsolicited_emails_and_or_sms_any_emails_and_or_sms_sent_by_wooble_will_only_be_in_connection_with_the_provision_of_agreed_services_amp_products_and_this_privacy_policy_periodically_we_may_reveal_general_statistical_information_about_wooble_amp_its_users_such_as_number_of_visitors_number_and_type_of_goods_and_services_purchased_etc_we_reserve_the_right_to_communicate_your_personal_information_to_any_third_party_that_makes_a_legally_compliant_request_for_its_disclosure"><![CDATA[We will not sell, share or rent your personal information to any 3rd party or use your email address/mobile number for unsolicited emails and/or SMS. Any emails and/or SMS sent by Wooble will only be in connection with the provision of agreed services & products and this Privacy Policy. Periodically, we may reveal general statistical information about Wooble & its users, such as number of visitors, number and type of goods and services purchased, etc. We reserve the right to communicate your personal information to any third party that makes a legally-compliant request for its disclosure.]]></string>
    <string name="personal_information">Personal Information</string>
    <string name="personal_information_means_and_includes_all_information_that_can_be_linked_to_a_specific_individual_or_to_identify_any_individual_such_as_name_address_mailing_address_telephone_number_email_id_credit_card_number_cardholder_name_card_expiration_date_information_about_your_mobile_phone_and_any_details_that_may_have_been_voluntarily_provide_by_the_user_in_connection_with_availing_any_of_the_services_on_wooble_when_you_browse_through_wooble_we_may_collect_information_regarding_the_mobile_tab_device_details_domain_and_host_from_which_you_access_the_internet_the_internet_protocol_ip_address_of_the_computer_or_internet_service_provider_isp_you_are_using_and_anonymous_site_statistical_data">Personal Information means and includes all information that can be linked to a specific individual or to identify any individual, such as name, address, mailing address, telephone number, email ID, credit card number, cardholder name, card expiration date, information about your mobile phone and any details that may have been voluntarily provide by the user in connection with availing any of the services on Wooble. When you browse through Wooble, we may collect information regarding the mobile/ tab device details, domain and host from which you access the internet, the Internet Protocol [IP] address of the computer or Internet service provider [ISP] you are using, and anonymous site statistical data.</string>
    <string name="use_of_personal_information">Use of Personal Information</string>
    <string name="we_use_personal_information_to_provide_you_with_services_amp_products_you_explicitly_requested_for_to_resolve_disputes_troubleshoot_concerns_help_promote_safe_services_collect_money_measure_consumer_interest_in_our_services_inform_you_about_offers_products_services_updates_customize_your_experience_detect_amp_protect_us_against_error_fraud_and_other_criminal_activity_enforce_our_terms_and_conditions_etc_we_also_use_your_contact_information_to_send_you_offers_based_on_your_previous_orders_and_interests_we_may_occasionally_ask_you_to_complete_optional_online_surveys_these_surveys_may_ask_you_for_contact_information_and_demographic_information_like_zip_code_age_gender_etc_we_use_this_data_to_customize_your_experience_providing_you_with_content_that_we_think_you_might_be_interested_in_and_to_display_content_according_to_your_preferences"><![CDATA[We use personal information to provide you with services & products you explicitly requested for, to resolve disputes, troubleshoot concerns, help promote safe services, collect money, measure consumer interest in our services, inform you about offers, products, services, updates, customize your experience, detect & protect us against error, fraud and other criminal activity, enforce our terms and conditions, etc. We also use your contact information to send you offers based on your previous orders and interests. We may occasionally ask you to complete optional online surveys. These surveys may ask you for contact information and demographic information (like zip code, age, gender, etc.). We use this data to customize your experience, providing you with content that we think you might be interested in and to display content according to your preferences.]]></string>
    <string name="cookies">Cookies</string>
    <string name="a_cookie_is_a_small_piece_of_information_stored_by_a_web_server_on_a_web_browser_so_it_can_be_later_read_back_from_that_browser_wooble_uses_cookie_and_tracking_technology_depending_on_the_features_offered_no_personal_information_will_be_collected_via_cookies_and_other_tracking_technology_however_if_you_previously_provided_personally_identifiable_information_cookies_may_be_tied_to_such_information">A “cookie” is a small piece of information stored by a web server on a web browser so it can be later read back from that browser. Wooble uses cookie and tracking technology depending on the features offered. No personal information will be collected via cookies and other tracking technology; however, if you previously provided personally identifiable information, cookies may be tied to such information.</string>
    <string name="links_to_other_sites">Links to Other Sites</string>
    <string name="our_site_links_to_other_websites_that_may_collect_personally_identifiable_information_about_you_wooble_is_not_responsible_for_the_privacy_practices_or_the_content_of_those_linked_websites">Our site links to other websites that may collect personally identifiable information about you. Wooble is not responsible for the privacy practices or the content of those linked websites.</string>
    <string name="security">Security</string>
    <string name="wooble_has_stringent_security_measures_in_place_to_protect_the_loss_misuse_and_alteration_of_the_information_under_our_control_whenever_you_change_or_access_your_account_information_we_offer_the_use_of_a_secure_server_once_your_information_is_in_our_possession_we_adhere_to_strict_security_guidelines_protecting_it_against_unauthorized_access">Wooble has stringent security measures in place to protect the loss, misuse, and alteration of the information under our control. Whenever you change or access your account information, we offer the use of a secure server. Once your information is in our possession we adhere to strict security guidelines, protecting it against unauthorized access.</string>
    <string name="consent">Consent</string>
    <string name="by_using_wooble_and_or_by_providing_your_information_you_consent_to_the_collection_and_use_of_the_information_you_disclose_on_wooble_in_accordance_with_this_privacy_policy_including_but_not_limited_to_your_consent_for_sharing_your_information_as_per_this_privacy_policy">By using Wooble and/or by providing your information, you consent to the collection and use of the information you disclose on Wooble in accordance with this Privacy Policy, including but not limited to your consent for sharing your information as per this privacy policy.</string>
    <string name="online_queries_in_wooble_first_response_time_1_working_day_final_resolution_time_2_working_days_helpline_connect_wooble_org_final_resolution_time_4_working_days_if_wooble_needs_additional_time_for_any_case_same_will_be_informed_to_customer_along_with_reason_of_delay_and_expected_resolution_timelines_level_2_complaints_if_customer_s_issue_is_not_resolved_even_after_contacting_various_complaint_resolution_channels_he_she_can_reach_out_to_our_grievance_officer_at_grievance_officer_wooble_pvt_ltd_1c_102_rajeev_nagar_patia_railway_station_road_bhubaneswar_odisha_751024_email_connect_wooble_org">Online queries in Wooble: First response time – 1 working day Final resolution time – 2 working days Helpline – connect@wooble.org Final resolution time – 4 working days If Wooble needs additional time for any case, same will be informed to customer along with reason of delay and expected resolution timelines Level 2 (Complaints) If customer’s issue is not resolved even after contacting various complaint resolution channels, he/she can reach out to our grievance officer at: Grievance Officer Wooble Pvt Ltd. 1c-102, Rajeev nagar, Patia railway station road, Bhubaneswar, Odisha – 751024 Email: connect@wooble.org</string>
</resources>