<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<item
    android:id="@+id/navigation_portfolio"
    android:title="@string/portfolio"
    android:icon="@drawable/ic_portfolio"
    />

    <item
        android:id="@+id/navigation_resume"
        android:title="@string/resume"
        android:icon="@drawable/ic_resume"/>

    <item
        android:id="@+id/navigation_blogs"
        android:title="@string/blogs"
        android:icon="@drawable/blog_icon"/>

    <item
        android:id="@+id/navigation_gallery"
        android:title="@string/gallery"
        android:icon="@drawable/ic_gallery"/>

    <item
        android:id="@+id/navigation_project"
        android:title="@string/works"
        android:icon="@drawable/ic_project"/>

</menu>