<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.credentials.Forgot_PasswordActivity">


    <LinearLayout
        android:id="@+id/linerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp_100_dsa"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/dp_30_dsa"
        android:layout_marginEnd="@dimen/dp_30_dsa"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_worry"
            android:textSize="@dimen/sp_28_dsa"
            android:fontFamily="@font/ubuntu"
            android:textStyle="bold"
            android:textColor="@color/splash_screen_cl"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:text="@string/don_t_worry_we_are_here"
            android:textSize="@dimen/sp_25_dsa"
            android:textStyle="bold"
            android:textColor="@color/splash_screen_cl"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:text="@string/send_you_a_verification_code"
            android:textSize="@dimen/sp_25_dsa"
            android:textStyle="bold"
            android:textColor="@color/splash_screen_cl"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="@string/to_reset_your_password"
        android:textSize="@dimen/sp_25_dsa"
        android:textStyle="bold"
        android:textColor="@color/splash_screen_cl"/>

    </LinearLayout>


    <EditText
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_58_dsa"
        android:layout_marginStart="@dimen/dp_30_dsa"
        android:layout_marginEnd="@dimen/dp_30_dsa"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email"
        android:padding="@dimen/dp_10_dsa"
        android:drawablePadding="@dimen/dp_10_dsa"
        android:singleLine="true"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/linerLayout"
        android:layout_marginTop="@dimen/dp_20_dsa"
        android:hint="@string/enter_your_registered_email"
        android:background="@drawable/login_edit_text_bg"
        android:autofillHints=""
        android:fontFamily="@font/ubuntu"
        tools:ignore="TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/passwordRecoverBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50_dsa"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        android:layout_marginStart="@dimen/dp_30_dsa"
        android:background="@drawable/login_button_bg"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dp_30_dsa"
        android:layout_marginEnd="@dimen/dp_30_dsa"
        android:fontFamily="@font/ubuntu"
        android:textSize="@dimen/sp_23_dsa"
        android:textAllCaps="false"
        android:text="@string/submit"/>


    <TextView
        android:id="@+id/gotoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back_to_login_screen"
        android:fontFamily="@font/ubuntu"
        app:layout_constraintTop_toBottomOf="@id/passwordRecoverBtn"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_18_dsa"
        android:textColor="#1E1D1D"
        android:textStyle="bold"
        android:textSize="@dimen/sp_19_dsa"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_330_dsa"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/dp_20_dsa"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/forgot_password_bg" />

</androidx.constraintlayout.widget.ConstraintLayout>