<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    android:scrollbars="none"
    tools:context=".ui.Setting.SettingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dp_20_dsa"
            tools:ignore="UselessParent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/place_holder"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_30_dsa"
                android:layout_marginStart="@dimen/dp_20_dsa"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/ubuntu"
               />
        </LinearLayout>


        <TextView
            android:id="@+id/help_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_center"
            android:textSize="@dimen/sp_20_dsa"
            android:layout_margin="@dimen/dp_20_dsa"
            android:textColor="@color/light_black_color"
            app:drawableStartCompat="@drawable/ic_help_center"
            android:fontFamily="@font/ubuntu"
            android:textStyle="bold"
            android:drawablePadding="@dimen/dp_20_dsa"
            />

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textSize="@dimen/sp_20_dsa"
            android:layout_margin="@dimen/dp_20_dsa"
            android:textColor="@color/light_black_color"
            app:drawableStartCompat="@drawable/ic_privacy_policy"
            android:fontFamily="@font/ubuntu"
            android:textStyle="bold"
            android:drawablePadding="@dimen/dp_20_dsa"
            />


        <TextView
            android:id="@+id/data_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_privacy"
            android:textSize="@dimen/sp_20_dsa"
            android:layout_margin="@dimen/dp_20_dsa"
            android:textColor="@color/light_black_color"
            app:drawableStartCompat="@drawable/ic_data_privacy"
            android:fontFamily="@font/ubuntu"
            android:textStyle="bold"
            android:drawablePadding="@dimen/dp_20_dsa"
            />

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_amp_conditions"
            android:textSize="@dimen/sp_20_dsa"
            android:layout_margin="@dimen/dp_20_dsa"
            android:textColor="@color/light_black_color"
            android:fontFamily="@font/ubuntu"
            android:textStyle="bold"
            android:drawablePadding="@dimen/dp_20_dsa"
            app:drawableStartCompat="@drawable/ic_terms_and_conditions" />

        <TextView
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_user_license_agreement"
            android:textSize="@dimen/sp_20_dsa"
            android:layout_margin="@dimen/dp_20_dsa"
            android:textColor="@color/light_black_color"
            android:fontFamily="@font/ubuntu"
            android:textStyle="bold"
            android:drawablePadding="@dimen/dp_20_dsa"
            app:drawableStartCompat="@drawable/ic_end_user_license_agreement" />

        <TextView
            android:id="@+id/rateUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_us"
            android:textSize="@dimen/sp_20_dsa"
            android:layout_margin="@dimen/dp_20_dsa"
            android:textColor="@color/light_black_color"
            app:drawableStartCompat="@drawable/ic_baseline_star_rate"
            android:fontFamily="@font/ubuntu"
            android:textStyle="bold"
            android:drawablePadding="@dimen/dp_20_dsa"
            />

        <TextView
            android:id="@+id/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20_dsa"
            android:drawablePadding="@dimen/dp_20_dsa"
            android:fontFamily="@font/ubuntu"
            android:text="@string/logout"
            android:textColor="@color/light_black_color"
            android:textSize="@dimen/sp_20_dsa"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_sign_out" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_18_dsa"
            android:text="@string/version_1_0"
            android:layout_margin="@dimen/dp_20_dsa"
            android:textColor="@color/light_black_color"
            android:fontFamily="@font/ubuntu"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:drawablePadding="@dimen/dp_20_dsa"
            />
    </LinearLayout>



</ScrollView>